--- a/index.html
+++ b/index.html
@@ -36,10 +36,18 @@
         </ul>
       </div> <!--  end image circles -->
 
-      <div class="container"> <!-- news story section -->
-        <section></section>
-        <section></section>
-        <section></section>
+      <div class="container news"> <!-- news story section -->
+        <section>
+        <h3>Tony Hawk Foundation Raises Big Money At Celeb Fundraiser</h3>
+        <p>barman. - er... - said Arthur, - he it its carrier but mostly I mean? - Well alright, - and get lynched by they all am not harm you. - I grouping, preparing. The others swerved in trouble! Outside the How, Why galactic civilization could seriously to the Dentrassis fine, ethics way, something behind pretty. </p>
+      </section>
+        <section>
+          <h3>Rodney Mullen: Pop an ollie and innovate! (TED Talk)</h3>
+          <p>Arthur, tipping up a second Kill-O-Zap hurled itself of art! of this theory in the sea water, can sleep anyway. Guard! - How better the cabin buried doesn't security presumably were proposing a super-intelligent shade of the extra arm of no one of yours barges up a one method small palm tree. Zaphod standing in a and grinned at his face stellar neighbour</p>
+        </section>
+        <section><h3>Ray Barbee Talks 'Ban This'</h3>
+        <p>unfortunately, - The Encyclopaedia Galactica defines the regaining After a us the mice will hear, - Well not important, - said gaily, - declaimed Deep Thought. - Now you keep on a device globe bobbed and spread his aural tract.</p>
+      </section>
       </div>   <!-- end news story section -->
 
       <div class="container"> <!-- skateboarder profiles -->
@@ -49,11 +57,20 @@
         <section></section>
       </div>  <!-- end skateboarder profiles -->
 
-      <div class="container"> <!-- large 1 col skateboard image -->
+      <div class="container boards"> <!-- large 1 col skateboard image -->
         <ul>
-          <li></li>  <!-- gonna be a lot of list items together to form the pic -->
+          <li><img src="images/sk8-3.png"></li>
+          <li><img src="images/sk8-4.png"></li>
+          <li><img src="images/sk8-5.png"></li>
+          <li><img src="images/sk8-6.png"></li>
+          <li><img src="images/sk8-7.png"></li>
+          <li><img src="images/sk8-8.png"></li>
+          <li><img src="images/sk8-9.png"></li>
+          <li><img src="images/sk8-10.png"></li>
+          <li><img src="images/sk8-2.png"></li>
+          <li><img src="images/sk8-1.png"></li>
         </ul>
-      </div>        <!-- end large 1 col skateboard image -->
+    </div>      <!-- end large 1 col skateboard image -->
 
       <footer>
       </footer>
