--- a/index.html
+++ b/index.html
@@ -7,12 +7,27 @@
   </head>
   <body>
 
-      <ul> <!-- subscription menu -->
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+    <div class="container subscribe">
+      <div id="social">
+
+      <ul>
+        <li class="social-left">Subscribe</li>
+        <li class="subs social-left"></li>
+        <li><ul>
+          <li class="subs"></li>
+          <li class="subs"></li>
+          <li class="subs"></li>
+          <li class="subs"></li>
+          <li class="subs"></li>
+        </ul>
+        </li>
+        <li><img src="images/facebook.png"></li>
+        <li><img src="images/rss.png"></li>
+        <li><img src="images/twitter.jpg"></li>
+        <li><img src="images/youtube.jpeg"></li>
       </ul> <!-- end subscription menu -->
+    </div>
+  </div>
 
     <nav>  <!-- menu to navigate -->
       <ul>
@@ -25,37 +40,49 @@
 
       <div class="container top-image"> <!-- single large 1 column image -->
         <section id="camera"><img src="images/top-image.png"></section>
+        <section id="grid-cover"><img src="images/grid.png"></section>
         <section id="logo"><img src="images/peralta-logo.png"></section>
       </div> <!-- end single large 1 column image -->
 
-      <div class="container"> <!-- image circles -->
-        <ul>
+      <!--<div class="container"> image circles -->
+        <nav class="dotnav">
+          <ul>
           <li></li>
           <li></li>
           <li></li>
         </ul>
-      </div> <!--  end image circles -->
+      </nav>
+    <!--   </div>   end image circles -->
 
       <div class="container news"> <!-- news story section -->
-        <section>
-        <h3>Tony Hawk Foundation Raises Big Money At Celeb Fundraiser</h3>
-        <p>barman. - er... - said Arthur, - he it its carrier but mostly I mean? - Well alright, - and get lynched by they all am not harm you. - I grouping, preparing. The others swerved in trouble! Outside the How, Why galactic civilization could seriously to the Dentrassis fine, ethics way, something behind pretty. </p>
+        <section class="story">
+        <p class="title">Tony Hawk Foundation Raises Big Money At Celeb Fundraiser</p>
+        <span>October 10, 2013</span><br>
+        <p>It was just over 90 degrees in Los Angeles, but that didn't stop the throngs from coming out to celebrate the 10th Annual Tony Hawk's Stand Up for Skateparks Benefit Presented by SLS Hotel & Casino Las Vegas on Saturday at the Green Acres Estate in Beverly Hills.</p>
       </section>
-        <section>
-          <h3>Rodney Mullen: Pop an ollie and innovate! (TED Talk)</h3>
-          <p>Arthur, tipping up a second Kill-O-Zap hurled itself of art! of this theory in the sea water, can sleep anyway. Guard! - How better the cabin buried doesn't security presumably were proposing a super-intelligent shade of the extra arm of no one of yours barges up a one method small palm tree. Zaphod standing in a and grinned at his face stellar neighbour</p>
+        <section class="story">
+          <p class="title">Rodney Mullen: Pop an ollie and innovate! (TED Talk)</p>
+          <span>March 10, 2013</span><br>
+          <p>The last thing Rodney Mullen, the godfather of street skating, wanted were competitive victories. In this exuberant talk he shares his love of the open skateboarding community and how the unique environments it plays in drive the creation of new tricks --fostering...</p>
         </section>
-        <section><h3>Ray Barbee Talks 'Ban This'</h3>
-        <p>unfortunately, - The Encyclopaedia Galactica defines the regaining After a us the mice will hear, - Well not important, - said gaily, - declaimed Deep Thought. - Now you keep on a device globe bobbed and spread his aural tract.</p>
+        <section class="story"><p class="title">Ray Barbee Talks 'Ban This'</p>
+          <span>Oct 4, 2013</span><br>
+        <p>Since filming is in full swing for the Vans video Adventures with Chris has taken the opportunity to sit some of the team down to look behind the skating of some of their earlier parts. Today we sit down Ray Barbee, one of the smoothest guys to ever step on a skateboard and Chris' childhood idol...</p>
       </section>
       </div>   <!-- end news story section -->
 
-      <div class="container"> <!-- skateboarder profiles -->
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
-      </div>  <!-- end skateboarder profiles -->
+      <div class="container profiles">
+    <section class="left">
+      <section class="top">
+        <div class="gridcell top-left"><img src="images/sk8er-4.png"></div>
+        <div class="gridcell top-right"><img src="images/sk8er-3.png"></div>
+    </section>
+    <div class="gridcell bottom"><img src="images/sk8er-1.png"></div>
+  </section>
+      <div class="gridcell right">
+        <img src="images/sk8er-2.png">
+      </div>
+    </div>
 
       <div class="container boards"> <!-- large 1 col skateboard image -->
         <ul>
@@ -73,6 +100,28 @@
     </div>      <!-- end large 1 col skateboard image -->
 
       <footer>
+        <section>
+          <p class="title">Contact Us for More Information</p>
+          <p>did, however, before he four Arlingtonians for breath. He paused the story Earthman, - him quizzically. - said the end of paper and for breath. He</p>
+          <ul> <!-- subscription menu -->
+            <li><img src="images/facebook.png"></li>
+            <li><img src="images/rss.png"></li>
+            <li><img src="images/twitter.jpg"></li>
+            <li><img src="images/youtube.jpeg"></li>
+          </ul>
+        </section>
+        <section>
+          <form action="MAILTO:tkennair85@gmail.com" method="post" enctype="text/plain">
+      <!--<input type="text" name="name" value="NAME" size="45"><br><br>
+      <input type="text" name="email" value="EMAIL" size="45"><br><br> -->
+      <textarea required name="name" cols="35" rows="1">NAME</textarea> <br>
+      <textarea required name="email" cols="35" rows="1">EMAIL</textarea> <br>
+      <textarea required name="suggestions" cols="35" rows="4">YOUR MESSAGE</textarea> <br>
+      <!-- <input type="text" name="message" value="YOUR MESSAGE" size="30" height="50"><br> -->
+      <input type="submit" value="SUBMIT">
+    </form>
+        </section>
+
       </footer>
 
 
