text over 4 pic

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 
     <nav>  <!-- menu to navigate -->
       <ul>
-        <div class="nav-menu"><li>-SK8T NEWS-</li></div>
-        <div class="nav-menu"><li>-SKATEBOARDERS-</li></div>
-        <div class="nav-menu"><li>-BOARD DESIGN-</li></div>
-        <div class="nav-menu"><li>-CONTACT US-</li></div>
+        <div class="nav-menu"><li>&#8212; &nbsp; SK8T NEWS &nbsp; &#8212;</li></div>
+        <div class="nav-menu"><li>&#8212; &nbsp; SKATEBOARDERS &nbsp; &#8212;</li></div>
+        <div class="nav-menu"><li>&#8212; &nbsp; BOARD DESIGN &nbsp; &#8212;</li></div>
+        <div class="nav-menu"><li>&#8212; &nbsp; CONTACT US &nbsp; &#8212;</li></div>
       </ul>
     </nav> <!-- end menu to navigate -->
 
@@ -59,28 +59,31 @@
         <p class="title">Tony Hawk Foundation Raises Big Money At Celeb Fundraiser</p>
         <span>October 10, 2013</span><br>
         <p>It was just over 90 degrees in Los Angeles, but that didn't stop the throngs from coming out to celebrate the 10th Annual Tony Hawk's Stand Up for Skateparks Benefit Presented by SLS Hotel & Casino Las Vegas on Saturday at the Green Acres Estate in Beverly Hills.</p>
+        <p class="more" align="center">[ Read More ]</p>
       </section>
         <section class="story">
           <p class="title">Rodney Mullen: Pop an ollie and innovate! (TED Talk)</p>
           <span>March 10, 2013</span><br>
           <p>The last thing Rodney Mullen, the godfather of street skating, wanted were competitive victories. In this exuberant talk he shares his love of the open skateboarding community and how the unique environments it plays in drive the creation of new tricks --fostering...</p>
+          <p class="more" align="center">[ Read More ]</p>
         </section>
         <section class="story"><p class="title">Ray Barbee Talks 'Ban This'</p>
           <span>Oct 4, 2013</span><br>
         <p>Since filming is in full swing for the Vans video Adventures with Chris has taken the opportunity to sit some of the team down to look behind the skating of some of their earlier parts. Today we sit down Ray Barbee, one of the smoothest guys to ever step on a skateboard and Chris' childhood idol...</p>
+        <p class="more" align="center">[ Read More ]</p>
       </section>
       </div>   <!-- end news story section -->
 
       <div class="container profiles">
     <section class="left">
       <section class="top">
-        <div class="gridcell top-left"><img src="images/sk8er-4.png"></div>
-        <div class="gridcell top-right"><img src="images/sk8er-3.png"></div>
+        <div class="gridcell top-left"><img src="images/sk8er-4.png"><div class="name-small"><p>LANCE MOUNTAIN</p></div></div>
+        <div class="gridcell top-right"><img src="images/sk8er-3.png"><div class="name-small"><p>RODNEY MULLEN</p></div></div>
     </section>
-    <div class="gridcell bottom"><img src="images/sk8er-1.png"></div>
+    <div class="gridcell bottom"><img src="images/sk8er-1.png"><div class="name-large"><p>STEVE CABALLERO</p></div></div>
   </section>
       <div class="gridcell right">
-        <img src="images/sk8er-2.png">
+        <img src="images/sk8er-2.png"><div class="name-small"><p>TOMMY GUERRERO</p></div>
       </div>
     </div>
 
