--- a/index.html
+++ b/index.html
@@ -74,6 +74,12 @@
       </section>
       </div>   <!-- end news story section -->
 
+      <div class="arrow-holder">
+        <div class="arrow">
+          <p>SKATEBOARDERS</p>
+        </div>
+      </div>
+
       <div class="container profiles">
     <section class="left">
       <section class="top">
