placeholders added to form

--- a/index.html
+++ b/index.html
@@ -80,7 +80,9 @@
         </div>
       </div>
 
+
       <div class="container profiles">
+
     <section class="left">
       <section class="top">
         <div class="gridcell top-left"><img src="images/sk8er-4.png"><div class="name-small"><p>LANCE MOUNTAIN</p></div></div>
@@ -123,9 +125,9 @@
           <form action="MAILTO:tkennair85@gmail.com" method="post" enctype="text/plain">
       <!--<input type="text" name="name" value="NAME" size="45"><br><br>
       <input type="text" name="email" value="EMAIL" size="45"><br><br> -->
-      <textarea required name="name" cols="35" rows="1">NAME</textarea> <br>
-      <textarea required name="email" cols="35" rows="1">EMAIL</textarea> <br>
-      <textarea required name="suggestions" cols="35" rows="4">YOUR MESSAGE</textarea> <br>
+      <textarea required name="name" cols="35" rows="1" placeholder="NAME"></textarea> <br>
+      <textarea required name="email" cols="35" rows="1" placeholder="EMAIL"></textarea> <br>
+      <textarea required name="suggestions" cols="35" rows="4" placeholder="YOUR MESSAGE"></textarea> <br>
       <!-- <input type="text" name="message" value="YOUR MESSAGE" size="30" height="50"><br> -->
       <input type="submit" value="SUBMIT">
     </form>
