--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Peralta Skateboarding</title>
-    <link rel="stylesheet" href="style.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="sassedup.css" media="screen" title="no title" charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
 
@@ -58,19 +59,19 @@
         <section class="story">
         <p class="title">Tony Hawk Foundation Raises Big Money At Celeb Fundraiser</p>
         <span>October 10, 2013</span><br>
-        <p>It was just over 90 degrees in Los Angeles, but that didn't stop the throngs from coming out to celebrate the 10th Annual Tony Hawk's Stand Up for Skateparks Benefit Presented by SLS Hotel & Casino Las Vegas on Saturday at the Green Acres Estate in Beverly Hills.</p>
-        <p class="more" align="center">[ Read More ]</p>
+        <p class="article">It was just over 90 degrees in Los Angeles, but that didn't stop the throngs from coming out to celebrate the 10th Annual Tony Hawk's Stand Up for Skateparks Benefit Presented by SLS Hotel & Casino Las Vegas on Saturday at the Green Acres Estate in Beverly Hills.</p>
+        <a href="#"><p class="more" align="center">[ Read More ]</p></a>
       </section>
         <section class="story">
           <p class="title">Rodney Mullen: Pop an ollie and innovate! (TED Talk)</p>
           <span>March 10, 2013</span><br>
-          <p>The last thing Rodney Mullen, the godfather of street skating, wanted were competitive victories. In this exuberant talk he shares his love of the open skateboarding community and how the unique environments it plays in drive the creation of new tricks --fostering...</p>
-          <p class="more" align="center">[ Read More ]</p>
+          <p class="article">The last thing Rodney Mullen, the godfather of street skating, wanted were competitive victories. In this exuberant talk he shares his love of the open skateboarding community and how the unique environments it plays in drive the creation of new tricks --fostering...</p>
+        <a href="#"><p class="more" align="center">[ Read More ]</p></a>
         </section>
         <section class="story"><p class="title">Ray Barbee Talks 'Ban This'</p>
           <span>Oct 4, 2013</span><br>
-        <p>Since filming is in full swing for the Vans video Adventures with Chris has taken the opportunity to sit some of the team down to look behind the skating of some of their earlier parts. Today we sit down Ray Barbee, one of the smoothest guys to ever step on a skateboard and Chris' childhood idol...</p>
-        <p class="more" align="center">[ Read More ]</p>
+        <p class="article">Since filming is in full swing for the Vans video Adventures with Chris has taken the opportunity to sit some of the team down to look behind the skating of some of their earlier parts. Today we sit down Ray Barbee, one of the smoothest guys to ever step on a skateboard and Chris' childhood idol...</p>
+        <a href="#"><p class="more" align="center">[ Read More ]</p></a>
       </section>
       </div>   <!-- end news story section -->
 
@@ -96,7 +97,23 @@
     </div>
 
       <div class="container boards"> <!-- large 1 col skateboard image -->
-        <ul>
+
+        <section class="skateboards">
+      <img src="images/sk8-1.png">
+      <img src="images/sk8-2.png">
+      <img src="images/sk8-3.png">
+      <img src="images/sk8-4.png">
+      <img src="images/sk8-5.png">
+      <img src="images/sk8-6.png">
+      <img src="images/sk8-7.png">
+      <img src="images/sk8-8.png">
+      <img src="images/sk8-9.png">
+      <img src="images/sk8-10.png">
+    </section>
+  </div>
+
+
+      <!-- Older version being kept as backup  <ul>
           <li><img src="images/sk8-3.png"></li>
           <li><img src="images/sk8-4.png"></li>
           <li><img src="images/sk8-5.png"></li>
@@ -108,7 +125,7 @@
           <li><img src="images/sk8-2.png"></li>
           <li><img src="images/sk8-1.png"></li>
         </ul>
-    </div>      <!-- end large 1 col skateboard image -->
+    </div>   -->   <!-- end large 1 col skateboard image -->
 
       <footer>
         <section>
